# d

./: .gitignore  .travis.yml  AGENTS.md  Cargo.toml  FEATURES.md  LICENSE  PROJECT_COMPARISON.md  README.md  compare_projects.sh
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs  cost.rs  lib.rs  plan.rs  planner.rs  reactor.rs
crates/agent/src/benchmark/: mod.rs
crates/agent/src/bgtask/: mod.rs
crates/agent/src/correction/: mod.rs
crates/agent/src/game/: mod.rs
crates/agent/src/lsp/: client.rs  mod.rs  types.rs
crates/agent/src/pattern/: mod.rs
crates/agent/src/personality/: analyzer.rs  mod.rs  storage.rs
crates/agent/src/plugin/: mod.rs
crates/agent/src/skills/: mod.rs
crates/agent/src/thinking/: mod.rs
crates/agent/src/workflow/: mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: chat.rs  lib.rs  repl.rs
crates/cli/src/cmdlet/: mod.rs
crates/cli/src/completion/: mod.rs
crates/cli/src/input/: mod.rs
crates/cli/src/ui/: colors.rs  mod.rs
crates/context/: Cargo.toml
crates/context/src/: compaction.rs  compaction_test.rs  lib.rs  token.rs  token_test.rs
crates/http/: Cargo.toml
crates/http/src/: api.rs  lib.rs  server.rs  utils.rs  websocket.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: config.rs  config_test.rs  daemon.rs  error.rs  lib.rs  module.rs  state.rs
crates/kernel/src/env/: mod.rs
crates/kernel/src/environment/: mod.rs
crates/kernel/src/integration/: mod.rs
crates/kernel/src/log/: mod.rs
crates/kernel/src/optimization/: mod.rs
crates/kernel/src/pcode/: mod.rs
crates/kernel/src/persistence/: mod.rs
crates/kernel/src/worktree/: mod.rs
crates/llm/: Cargo.toml
crates/llm/src/: client.rs  lib.rs  message.rs  message_test.rs  tool.rs  tool_test.rs
crates/llm/src/provider/: mod.rs  moonshot.rs  ollama.rs  openai.rs  registry.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  lib.rs  types.rs
crates/memory/: Cargo.toml
crates/memory/src/: embedding.rs  lib.rs  store.rs
crates/rag/: Cargo.toml
crates/rag/src/: chunker.rs  engine.rs  index.rs  lib.rs
crates/security/: Cargo.toml
crates/security/src/: approval.rs  audit.rs  checker.rs  lib.rs  policy.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs  session.rs  session_test.rs  store.rs
crates/session/src/export/: default.css  mod.rs
crates/storage/: Cargo.toml
crates/storage/src/: blob.rs  cache.rs  document.rs  kv.rs  lib.rs
crates/toolbox/: Cargo.toml
crates/toolbox/src/: lib.rs  patterns.rs  strings.rs  transform.rs  validation.rs
crates/tools/: Cargo.toml
crates/tools/src/: ask_user.rs  fetch.rs  fs.rs  git.rs  grep.rs  lib.rs  shell.rs  str_replace.rs  web.rs
src/: error.rs  httpd.rs  lib.rs  list.rs  main.rs  send.rs  utils.rs
tests/: e2e_tests.rs  integration_test.rs  integration_tests.rs  spike_tests.rs  tool_integration.rs  unit_tests.rs
tests/integration/: README.md
