[package]
name = "agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI agent orchestration layer"

[dependencies]
kernel = { workspace = true }
llm = { workspace = true }
session = { workspace = true }
memory = { workspace = true }
tools = { workspace = true }
security = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
