[package]
name = "context"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context compaction for long conversations"

[dependencies]
llm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
