[package]
name = "kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core daemon framework"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
libc = "0.2"
