[package]
name = "llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM provider abstraction layer"

[dependencies]
kernel = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
