[package]
name = "mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Model Context Protocol implementation"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
async-trait = "0.1"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
