[package]
name = "memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Long-term memory and vector storage"

[dependencies]
kernel = { workspace = true }
llm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
