[package]
name = "rag"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RAG (Retrieval-Augmented Generation) implementation"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
