[package]
name = "security"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Security and approval system"

[dependencies]
kernel = { workspace = true }
llm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
