[package]
name = "session"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Chat session management"

[dependencies]
kernel = { workspace = true }
llm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
