[package]
name = "tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tool execution system"

[dependencies]
kernel = { workspace = true }
llm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
